--- a/style.css
+++ b/style.css
@@ -14,9 +14,9 @@
   --color-yellow: #fff7d1;
   --color-orange: #feb546;
   --color-black: #000000;
-  --color-main: #0AF0D2;
-  --color-dark-main: #07B39C;
-  --color-deep-dark-main: #047062;
+  --color-main: #B8ECE0;
+  --color-main-dark: #9CD6B8;
+  --color-main-light: #B4F7C2;
 
   /* Font size */
   --font-large: 48px;
@@ -51,8 +51,18 @@ a{
 }
 
 ul {
-  list-style: none;
   padding-left: 0;
+}
+
+li {
+  list-style: none;
+}
+
+button {
+  background-color: transparent;
+  cursor: pointer;
+  border: none;
+  outline: none;
 }
 
 /* Typography */
@@ -91,7 +101,7 @@ p {
   align-items: center;
   background-color: var(--color-main);
   color: var(--color-white);
-  padding: 16px;
+  padding: 8px 16px;
 }
 
 .navbar__menu {
@@ -114,9 +124,41 @@ p {
 
 .navbar__menu__item:hover {
   border: 1px solid var(--color-white);
-  background-color: var(--color-dark-main);
+  background-color: var(--color-main-dark);
 }
 /* 
 .navbar__menu__item.active {
   border: 1px solid var(--color-white);
 } */
+
+/* Home */
+#home {
+  background: url("./images/background/home-background.png") center/cover no-repeat;
+  padding: 40px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* color: var(--color-white); */
+}
+
+.home__avatar {
+  width: 250px;
+  height: 250px;
+  border-radius: 50%;
+  border: 1px solid var(--color-white);
+}
+
+.home__title,
+.home__description {
+  color: var(--color-white);
+}
+
+.home__contact {
+  font-size: var(--font-regular);
+  font-weight: var(--weight-bold);
+  margin: 24px;
+  padding: 8px 12px;
+  border: 2px solid var(--color-white);
+  border-radius: 5px;
+}
