--- a/style.css
+++ b/style.css
@@ -32,6 +32,9 @@
 
   /* Size */
   --size-border-radius: 4px;
+
+  /* Animation */
+  --anumation-duration: 300ms;
 }
 
 /* Universal tags */
@@ -161,4 +164,81 @@ p {
   padding: 8px 12px;
   border: 2px solid var(--color-white);
   border-radius: 5px;
+}
+
+/* Section common */
+.section {
+  text-align: center;
+  padding: 50px;
+  max-width: 1200px;
+  margin: auto;
+}
+
+/* About */
+.about__majors {
+  display: flex;
+  justify-content: space-between;
+  margin: 80px 0;
+}
+
+.major__icon {
+  width: 170px;
+  height: 170px;
+  font-size: 70px;
+  line-height: 170px;
+  margin: auto;
+  color: var(--color-main-dark);
+  border: 2px solid var(--color-main-dark);
+  border-radius: 50%;
+  margin-bottom: 16px;
+}
+
+.major__icon i {
+  transition: all var(--anumation-duration) ease;
+}
+
+.major__icon:hover i{
+  color: var(--color-main-light);
+  transform: rotate(-10deg) scale(1.2);
+}
+
+.major__title,
+.major__description {
+  color: var(--color-dark-grey);
+}
+
+.major__description {
+  font-size: var(--font-small);
+}
+
+.about__career {
+  padding: 0;
+}
+
+.job {
+  display: flex;
+  align-items: center;
+}
+
+.job__logo {
+  width: 50px;
+  height: 50px;
+}
+
+.job__description {
+  margin:0 16px;
+  text-align: left;
+}
+
+.job__name,
+.job__period {
+  color: var(--color-light-grey);
+}
+
+.job__name {
+  font-size: var(--font-small);
+}
+
+.job__period {
+  font-size: var(--font-micro);
 }
