--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ h1 {
 }
 
 h2 {
-  font-size: var(--font-regular);
+  font-size: var(--font-medium);
   font-weight: var(--weight-semi-bold);
   color: var(--color-black);
   margin: 8px 0;
@@ -443,4 +443,28 @@ p {
 
 .name a {
   color: var(--color-dark-pink);
+}
+
+/* Contact */
+#contact {
+  background-color: var(--color-main);
+}
+
+.contact__title,
+.contact__email,
+.copylight {
+  color:var(--color-white);
+}
+
+.contact__title {
+  margin: 32px 0;
+}
+
+.contact__links {
+  font-size: var(--font-large);
+  margin: 24px 0;
+}
+
+.contact__links i:hover {
+  transform: scale(1.1);
 }
