--- a/style.css
+++ b/style.css
@@ -134,6 +134,15 @@ p {
   border: 1px solid var(--color-white);
 } */
 
+.navbar__toggle-btn {
+  position: absolute;
+  top: 14px;
+  right: 32px;
+  font-size: 24px;
+  color: var(--color-white);
+  display: none;
+}
+
 /* Home */
 #home {
   background: url("./images/background/home-background.png") center/cover no-repeat;
@@ -468,4 +477,21 @@ p {
 
 .contact__links i:hover {
   transform: scale(1.1);
+}
+
+/* For below 768px screen width */
+@media screen and (max-width: 768px) {
+  .navbar__toggle-btn {
+    display: block;
+  }
+  #navbar {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .navbar__menu {
+    flex-direction: column;
+    text-align: center;
+    width: 100%;
+    display: none;
+  }
 }
