JS: remove active from nav

--- a/style.css
+++ b/style.css
@@ -351,7 +351,7 @@ p {
   padding: 8px 48px;
 }
 
-.category__btn.active,
+.category__btn.selected,
 .category__btn:hover {
   background-color: var(--color-main);
   color: var(--color-white);
